tests/resource/invalid/type/class/access_unassigned_class_var.mamba
class X
    def z: Int

    def init(self) =>
        self.z
